<resources>
    <string name="app_name">VolleyMatch</string>

    <string name="draw_teams">Sortear\n times</string>
    <string name="draw_teams_menu">Sortear times</string>

    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>

    <!-- Screen: scoreboard-->
    <string name="btn_scoreboard">Placar</string>
    <string name="txt_score">%02d</string>
    <string name="txt_help"><b>Click normal:</b> +1 ponto\n<b>Click longo:</b> -1 ponto</string>
    <string name="help">Ajuda</string>
    <string name="restart">Reiniciar placar</string>
    <string name="point">00</string>

    <!-- Screen: groups -->
    <string name="groups">Grupos</string>
    <string name="group">Grupo</string>
    <string name="name_group">Nome do grupo</string>
    <string name="create_group">Criar Grupo</string>
    <string name="group_empty_player_list">Nenhum jogador no grupo</string>
    <string name="empty_groups_list">Nenhum grupo encontrado</string>
    <string name="add_player">Adicionar jogador</string>

    <!-- Screen: register -->
    <string name="name">Nome</string>
    <string name="position">Posição</string>
    <string name="undefined_position">Não definida</string>
    <string name="skill_level">Nível de habilidade</string>

    <!-- Screen: player -->
    <string name="player">Jogador</string>
    <string name="register_player">Cadastrar Jogador</string>
    <string name="save">Salvar</string>
    <string name="players">Jogadores</string>
    <string name="empty_player_list">Nenhum jogador encontrado</string>
    <string name="no_player">Nenhum jogador</string>
    <string name="qtd_player">%d Jogador</string>
    <string name="qtd_players">%d Jogadores</string>
    <string name="search_player">Pesquisar jogador(a)</string>
    <string name="empty_player_register">Nenhum jogador cadastrado</string>

    <!-- Screen: draw -->
    <string name="draw">Sortear</string>
    <string name="select_players">Selecionar jogadores</string>
    <string name="select_group">Selecionar grupo</string>
    <string name="list">Lista</string>
    <string name="qtd_players_team">Jogadores por time</string>
    <string name="position_5x1">Sistema tático 5x1</string>
    <string name="skill_level_drawTeam">Habilidade</string>
    <string name="selected_all">Selecionar todos</string>
    <string name="clear_all">Desmarcar todos</string><string name="params">  Critérios para o sorteio  </string>m
    <string name="desc_next_screen">Avançar para a próxima tela</string>
    <string name="select_next">"Selecione os jogadores e avance"</string>

    <!-- Screen: result -->
    <string name="result">Resultado</string>
    <string name="team">Time</string>
    <string name="share_txt">Compartilhar via</string>
    <string name="team_txt">"TIME "</string>
    <string name="setter_txt">Levantador(a)</string>
    <string name="outside_txt">Ponteiro(a)</string>
    <string name="opposite_txt">Oposto(a)</string>
    <string name="middle_txt">Central</string>
    <string name="libero_txt">Líbero</string>
    <string name="info_app_txt">"Sorteio gerado no app VolleyMatch.\n%s"</string>
    <string name="not_enought_players">Não há jogadores com posições definidas em número suficiente para todos os times</string>
    <string name="position_show">" - %s"</string>
    <string name="num_team_show">TIME %s</string>
    <string name="share">Compartilhar</string>

    <!-- toolbar -->
    <string name="toolbar_title_players">Jogadores</string>
    <string name="toolbar_title_drawTeams">Sortear times</string>
    <string name="toolbar_title_register">Registrar jogador</string>
    <string name="toolbar_title_edit">Editar jogador</string>
    <string name="toolbar_title_result">Times sorteados</string>
    <string name="toolbar_title_groups">Grupos</string>
    <string name="search">Pesquisar</string>

    <!-- dialogs -->
    <string name="edit">Editar</string>
    <string name="delete">Deletar</string>
    <string name="cancel">Cancelar</string>
    <string name="create">Criar</string>
    <string name="confirm_player_deletion">Excluir este jogador?</string>
    <string name="confirm_group_deletion">Excluir este grupo?</string>
    <string name="alert_selection">Selecione os jogadores!</string>
    <string name="yes">SIM</string>
    <string name="no">NÃO</string>

    <!-- database operations -->
    <string name="player_inserted_successfully">Jogador registrado</string>
    <string name="player_error">Erro! Tente novamente</string>
    <string name="player_updated_successfully">Jogador atualizado</string>
    <string name="player_error_to_updated">Erro ao editar jogador</string>
    <string name="player_deleted_successfully">Jogador deletado</string>
    <string name="player_error_to_delete">Erro ao deletar jogador</string>
    <string name="player_error_in_search">Erro ao pesquisar jogador</string>
    <string name="group_inserted_successfully">Grupo criado</string>
    <string name="group_error_to_insert">Grupo não registrado</string>
    <string name="group_updated_successfully">Grupo atualizado</string>
    <string name="group_error_to_updated">Erro ao atualizar grupo</string>
    <string name="group_deleted_successfully">Grupo deletado</string>
    <string name="group_error_to_delete">Erro ao deletar grupo</string>
    <string name="crosRef_inserted_successfully">Jogador adicionado ao grupo</string>
    <string name="crosRef_error_to_insert">Erro ao inserir jogador no grupo</string>

    <!-- description -->
    <string name="desc_name">Escreva o nome do jogador</string>
    <string name="desc_group">Selecione o grupo do qual o jogador faz parte</string>
    <string name="app_desc">Para suas partidas de voleibol</string>

    <!-- Screen: edit result -->
    <string name="description_edit_1" translatable="false">Alteração manual dos times</string>
    <string name="description_edit_2" translatable="false">Arraste e solte os jogadores</string>
    <string name="edit_teams" translatable="false">Editar times</string>
    <string name="draw_again">Sortear novamente</string>


</resources>