<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp"
            android:orientation="vertical">

            <TextView
                style="@style/Theme.MeuApp.FormTextTitle"
                android:text="@string/name" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/player_register_input_name"
                style="@style/Theme.MeuApp.FormInputLayout_EditText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/player_register_edit_name"
                    style="@style/Theme.MeuApp.FormEditText" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/Theme.MeuApp.FormTextTitle"
                android:text="@string/position" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Theme.MeuApp.FormInputLayout_DropDown">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/player_register_txt_dropdown_positions"
                    style="@style/Theme.MeuApp.FormAutoComplete_DropDown"
                    android:entries="@array/positions" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/Theme.MeuApp.FormTextTitle"
                android:text="@string/skill_level" />

            <RatingBar
                android:id="@+id/player_register_ratingbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="10dp"
                android:numStars="5"
                android:stepSize="1.0" />

            <TextView
                style="@style/Theme.MeuApp.FormTextTitle"
                android:text="@string/group" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Theme.MeuApp.FormInputLayout_DropDown">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/player_register_txt_dropdown_groups"
                    style="@style/Theme.MeuApp.FormAutoComplete_DropDown"
                    android:entries="@array/positions" />

            </com.google.android.material.textfield.TextInputLayout>

            <co.geisyanne.meuapp.common.util.LoadingButton
                android:id="@+id/player_register_btn_save"
                style="@style/Theme.MeuApp.FormLoadingButton"
                app:text="@string/save" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>