<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/drawTeam_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/draw_teams"
        android:textAllCaps="true"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/drawTeam_btn_select_players"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="24dp"
        android:drawablePadding="4dp"
        android:text="@string/select_players"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:icon="@drawable/baseline_person_add_alt_1_24"
        app:iconGravity="textStart"
        app:iconTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/drawTeam_txt" />


    <TextView
        android:id="@+id/drawTeam_txt_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:text="@string/qtd_players_team"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/drawTeam_btn_select_players" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        app:hintEnabled="false"
        app:layout_constraintBottom_toBottomOf="@id/drawTeam_txt_2"
        app:layout_constraintStart_toEndOf="@id/drawTeam_txt_2"
        app:layout_constraintTop_toTopOf="@id/drawTeam_txt_2">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/drawTeam__txt_dropdown_numbers"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:dropDownSelector="@android:color/holo_green_light"
            android:entries="@array/numbers"
            android:inputType="none"
            android:paddingTop="8dp"
            android:paddingBottom="8dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/drawTeam_txt_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="30dp"
        android:text="@string/position_5x1"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/drawTeam_txt_2" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/drawTeam_switch_position"
        app:layout_constraintBottom_toBottomOf="@id/drawTeam_txt_3"
        app:layout_constraintStart_toEndOf="@id/drawTeam_txt_3"
        app:layout_constraintTop_toTopOf="@id/drawTeam_txt_3"
        android:layout_marginStart="10dp"
        android:checked="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/drawTeam_txt_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="30dp"
        android:text="@string/skill_level_drawTeam"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/drawTeam_txt_3" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/drawTeam_switch_level"
        app:layout_constraintBottom_toBottomOf="@id/drawTeam_txt_4"
        app:layout_constraintStart_toEndOf="@id/drawTeam_txt_4"
        app:layout_constraintTop_toTopOf="@id/drawTeam_txt_4"
        android:layout_marginStart="10dp"
        android:checked="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/drawTeam_btn_draw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="24dp"
        android:drawablePadding="4dp"
        android:text="@string/draw"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/drawTeam_txt_4" />




</androidx.constraintlayout.widget.ConstraintLayout>