<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_primary"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".presentation.main.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_marginTop="70dp"
        android:layout_centerHorizontal="true"
        android:textSize="50sp"
        android:textColor="@color/yellow_primary"
        android:fontFamily="@font/lilita_one"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_desc"
        android:layout_marginTop="125dp"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:fontFamily="@font/dosis_bold"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="210dp"
        app:cardCornerRadius="60dp"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="0dp"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="170dp"
                android:layout_height="130dp"
                android:layout_marginBottom="70dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/main_btn_draw_team"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/blue_primary"
                    android:text="@string/draw_teams"
                    android:textColor="@color/white"
                    android:fontFamily="@font/m_plus_rounded_1c_medium"
                    android:textSize="17sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="170dp"
                android:layout_height="130dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/main_btn_scoreboard"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/blue_primary"
                    android:text="@string/btn_scoreboard"
                    android:fontFamily="@font/m_plus_rounded_1c_medium"
                    android:textColor="@color/white"
                    android:textSize="17sp" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <View
        android:foregroundGravity="bottom"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:layout_height="70dp" />

</RelativeLayout>
