<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    style="@style/containerMain"
    android:padding="@dimen/_6sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/_10sdp">

        <TextView
            style="@style/txtBlueWhite"
            android:id="@+id/draw_txt_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:text="@string/params"
            android:textAllCaps="true"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/draw_view"
            android:layout_width="0dp"
            android:background="?attr/colorSecondary"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_4sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/draw_txt_1" />

        <TextView
            android:id="@+id/draw_txt_2"
            style="@style/Theme.VolleyMatch.Text.customizableDialog"
            android:text="@string/qtd_players_team"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/draw_view" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/draw_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/draw_txt_2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/draw_txt_2"
            app:layout_constraintTop_toTopOf="@id/draw_txt_2">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/draw_dropdown_num"
                android:dropDownSelector="@color/yellow_light"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_28sdp"
                android:entries="@array/numbers"
                android:inputType="none"
                android:paddingTop="@dimen/_5sdp"
                android:paddingBottom="@dimen/_5sdp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/draw_txt_3"
            style="@style/Theme.VolleyMatch.Text.customizableDialog"
            android:text="@string/position_5x1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/draw_txt_2" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/draw_switch_position"
            style="@style/Theme.VolleyMatch.Switch.customizableDialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/draw_txt_3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="@id/draw_txt_3"
            app:thumbTint="?attr/colorPrimary"
            app:trackDecorationTint="?attr/colorSecondary"
            app:layout_constraintStart_toEndOf="@id/draw_txt_3"
            app:trackTint="?attr/colorSecondary" />

        <TextView
            android:id="@+id/draw_txt_4"
            style="@style/Theme.VolleyMatch.Text.customizableDialog"
            android:text="@string/skill_level_drawTeam"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/draw_txt_3" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/draw_switch_lvl"
            style="@style/Theme.VolleyMatch.Switch.customizableDialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/draw_txt_4"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/draw_txt_4"
            app:layout_constraintTop_toTopOf="@id/draw_txt_4"
            app:thumbTint="?attr/colorPrimary"
            app:trackDecorationTint="?attr/colorSecondary"
            app:trackTint="?attr/colorSecondary" />

        <Button
            android:id="@+id/draw_btn_go_result"
            android:layout_width="0dp"
            android:backgroundTint="@color/blue_primary"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:drawablePadding="@dimen/_4sdp"
            android:text="@string/draw"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/draw_txt_4" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
